unpackaged/main/default/objects/Prototipo__c/Prototipo__c.object-meta.xml
<CustomObject>
    <label>Prototipo</label>
    <nameField>
        <label>Prototipo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prototipos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>