unpackaged/main/default/objects/Prototipo__c/fields/Activo_pro__c.field-meta.xml
<CustomField>
    <fullName>Activo_pro__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>