unpackaged/main/default/objects/Prototipo__c/fields/Cantidad_Viviendas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Viviendas__c</fullName>
    <label>Cantidad Viviendas</label>
    <summaryForeignKey>Vivienda__c.Prototipo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>