unpackaged/main/default/objects/Prototipo__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Prototipos</relationshipLabel>
    <relationshipName>Prototipos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>