unpackaged/main/default/objects/Prototipo__c/fields/Id_Mas_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Id_Mas_Comercial__c</fullName>
    <label>Id Mas Comercial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>