unpackaged/main/default/objects/Prototipo__c/fields/Id_Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Id_Prototipo__c</fullName>
    <externalId>true</externalId>
    <label>Id Prototipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>