unpackaged/main/default/objects/Prototipo__c/fields/Imagen_01__c.field-meta.xml
<CustomField>
    <fullName>Imagen_01__c</fullName>
    <label>Imagen 01</label>
    <type>Url</type>
</CustomField>