unpackaged/main/default/objects/Prototipo__c/fields/Imagen_02__c.field-meta.xml
<CustomField>
    <fullName>Imagen_02__c</fullName>
    <label>Imagen 02</label>
    <type>Url</type>
</CustomField>