unpackaged/main/default/objects/Prototipo__c/fields/ImgPrototipo__c.field-meta.xml
<CustomField>
    <fullName>ImgPrototipo__c</fullName>
    <label>Img Prototipo</label>
    <type>Url</type>
</CustomField>