unpackaged/main/default/objects/Prototipo__c/fields/Ingrcony_prot__c.field-meta.xml
<CustomField>
    <fullName>Ingrcony_prot__c</fullName>
    <label>Ingresos Conyugales Desde</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>