unpackaged/main/default/objects/Prototipo__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Modelos__c</referenceTo>
    <relationshipLabel>Prototipos</relationshipLabel>
    <relationshipName>Prototipos</relationshipName>
    <type>Lookup</type>
</CustomField>