unpackaged/main/default/objects/Prototipo__c/fields/Nombre_Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Prototipo__c</fullName>
    <externalId>true</externalId>
    <label>Nombre Prototipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>