unpackaged/main/default/objects/Prototipo__c/fields/Pagweb_prot__c.field-meta.xml
<CustomField>
    <fullName>Pagweb_prot__c</fullName>
    <label>Pagina Web</label>
    <type>Url</type>
</CustomField>