unpackaged/main/default/objects/Prototipo__c/fields/PlanoArquitectonico__c.field-meta.xml
<CustomField>
    <fullName>PlanoArquitectonico__c</fullName>
    <label>Plano Arquitectónico</label>
    <type>Url</type>
</CustomField>