unpackaged/main/default/objects/Prototipo__c/fields/Plantas__c.field-meta.xml
<CustomField>
    <fullName>Plantas__c</fullName>
    <label>Plantas</label>
    <length>1</length>
    <type>Text</type>
</CustomField>