unpackaged/main/default/objects/Prototipo__c/fields/Precio_pro__c.field-meta.xml
<CustomField>
    <fullName>Precio_pro__c</fullName>
    <label>Precio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>