unpackaged/main/default/objects/Prototipo__c/fields/Prototipo_pro__c.field-meta.xml
<CustomField>
    <fullName>Prototipo_pro__c</fullName>
    <label>Campo Control</label>
    <length>80</length>
    <type>Text</type>
</CustomField>