unpackaged/main/default/objects/Prototipo__c/fields/Tour_360__c.field-meta.xml
<CustomField>
    <fullName>Tour_360__c</fullName>
    <label>Tour 360</label>
    <type>Url</type>
</CustomField>