unpackaged/main/default/objects/Prototipo__c/fields/Version_Precio_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Version_Precio_Presupuesto__c</fullName>
    <label>Versión Precio Presupuesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oficial Firmada</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>